src/libqmessagebox.h

typedef struct QAbstractButton QAbstractButton;
typedef struct QCheckBox QCheckBox;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMessageBox QMessageBox;
typedef struct QMetaObject QMetaObject;
typedef struct QPixmap QPixmap;
typedef struct QPushButton QPushButton;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QWidget QWidget;
QMessageBox* QMessageBox_new(QWidget* parent);
QMessageBox* QMessageBox_new2();
QMessageBox* QMessageBox_new3(int icon, libqt_string title, libqt_string text);
QMessageBox* QMessageBox_new4(libqt_string title, libqt_string text, int icon, int button0, int button1, int button2);
QMessageBox* QMessageBox_new5(int icon, libqt_string title, libqt_string text, int buttons);
QMessageBox* QMessageBox_new6(int icon, libqt_string title, libqt_string text, int buttons, QWidget* parent);
QMessageBox* QMessageBox_new7(int icon, libqt_string title, libqt_string text, int buttons, QWidget* parent, int flags);
QMessageBox* QMessageBox_new8(libqt_string title, libqt_string text, int icon, int button0, int button1, int button2, QWidget* parent);
QMessageBox* QMessageBox_new9(libqt_string title, libqt_string text, int icon, int button0, int button1, int button2, QWidget* parent, int f);
QMetaObject* QMessageBox_MetaObject(const QMessageBox* self);
void* QMessageBox_Metacast(QMessageBox* self, const char* param1);
int QMessageBox_Metacall(QMessageBox* self, int param1, int param2, void** param3);
libqt_string QMessageBox_Tr(const char* s);
void QMessageBox_AddButton(QMessageBox* self, QAbstractButton* button, int role);
QPushButton* QMessageBox_AddButton2(QMessageBox* self, libqt_string text, int role);
QPushButton* QMessageBox_AddButtonWithButton(QMessageBox* self, int button);
void QMessageBox_RemoveButton(QMessageBox* self, QAbstractButton* button);
libqt_list /* of QAbstractButton* */ QMessageBox_Buttons(const QMessageBox* self);
int QMessageBox_ButtonRole(const QMessageBox* self, QAbstractButton* button);
void QMessageBox_SetStandardButtons(QMessageBox* self, int buttons);
int QMessageBox_StandardButtons(const QMessageBox* self);
int QMessageBox_StandardButton(const QMessageBox* self, QAbstractButton* button);
QAbstractButton* QMessageBox_Button(const QMessageBox* self, int which);
QPushButton* QMessageBox_DefaultButton(const QMessageBox* self);
void QMessageBox_SetDefaultButton(QMessageBox* self, QPushButton* button);
void QMessageBox_SetDefaultButtonWithButton(QMessageBox* self, int button);
QAbstractButton* QMessageBox_EscapeButton(const QMessageBox* self);
void QMessageBox_SetEscapeButton(QMessageBox* self, QAbstractButton* button);
void QMessageBox_SetEscapeButtonWithButton(QMessageBox* self, int button);
QAbstractButton* QMessageBox_ClickedButton(const QMessageBox* self);
libqt_string QMessageBox_Text(const QMessageBox* self);
void QMessageBox_SetText(QMessageBox* self, libqt_string text);
int QMessageBox_Icon(const QMessageBox* self);
void QMessageBox_SetIcon(QMessageBox* self, int icon);
QPixmap* QMessageBox_IconPixmap(const QMessageBox* self);
void QMessageBox_SetIconPixmap(QMessageBox* self, QPixmap* pixmap);
int QMessageBox_TextFormat(const QMessageBox* self);
void QMessageBox_SetTextFormat(QMessageBox* self, int format);
void QMessageBox_SetTextInteractionFlags(QMessageBox* self, int flags);
int QMessageBox_TextInteractionFlags(const QMessageBox* self);
void QMessageBox_SetCheckBox(QMessageBox* self, QCheckBox* cb);
QCheckBox* QMessageBox_CheckBox(const QMessageBox* self);
int QMessageBox_Information(QWidget* parent, libqt_string title, libqt_string text);
int QMessageBox_Information2(QWidget* parent, libqt_string title, libqt_string text, int button0);
int QMessageBox_Question(QWidget* parent, libqt_string title, libqt_string text);
int QMessageBox_Question2(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
int QMessageBox_Warning(QWidget* parent, libqt_string title, libqt_string text);
int QMessageBox_Warning2(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
int QMessageBox_Critical(QWidget* parent, libqt_string title, libqt_string text);
int QMessageBox_Critical2(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
void QMessageBox_About(QWidget* parent, libqt_string title, libqt_string text);
void QMessageBox_AboutQt(QWidget* parent);
int QMessageBox_Information3(QWidget* parent, libqt_string title, libqt_string text, int button0);
int QMessageBox_Information4(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text);
int QMessageBox_Question3(QWidget* parent, libqt_string title, libqt_string text, int button0);
int QMessageBox_Question4(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text);
int QMessageBox_Warning3(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
int QMessageBox_Warning4(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text);
int QMessageBox_Critical3(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
int QMessageBox_Critical4(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text);
libqt_string QMessageBox_ButtonText(const QMessageBox* self, int button);
void QMessageBox_SetButtonText(QMessageBox* self, int button, libqt_string text);
libqt_string QMessageBox_InformativeText(const QMessageBox* self);
void QMessageBox_SetInformativeText(QMessageBox* self, libqt_string text);
libqt_string QMessageBox_DetailedText(const QMessageBox* self);
void QMessageBox_SetDetailedText(QMessageBox* self, libqt_string text);
void QMessageBox_SetWindowTitle(QMessageBox* self, libqt_string title);
void QMessageBox_SetWindowModality(QMessageBox* self, int windowModality);
QPixmap* QMessageBox_StandardIcon(int icon);
void QMessageBox_ButtonClicked(QMessageBox* self, QAbstractButton* button);
bool QMessageBox_Event(QMessageBox* self, QEvent* e);
void QMessageBox_ResizeEvent(QMessageBox* self, QResizeEvent* event);
void QMessageBox_ShowEvent(QMessageBox* self, QShowEvent* event);
void QMessageBox_CloseEvent(QMessageBox* self, QCloseEvent* event);
void QMessageBox_KeyPressEvent(QMessageBox* self, QKeyEvent* event);
void QMessageBox_ChangeEvent(QMessageBox* self, QEvent* event);
libqt_string QMessageBox_Tr2(const char* s, const char* c);
libqt_string QMessageBox_Tr3(const char* s, const char* c, int n);
int QMessageBox_Information42(QWidget* parent, libqt_string title, libqt_string text, int buttons);
int QMessageBox_Information5(QWidget* parent, libqt_string title, libqt_string text, int buttons, int defaultButton);
int QMessageBox_Information52(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
int QMessageBox_Question42(QWidget* parent, libqt_string title, libqt_string text, int buttons);
int QMessageBox_Question5(QWidget* parent, libqt_string title, libqt_string text, int buttons, int defaultButton);
int QMessageBox_Warning42(QWidget* parent, libqt_string title, libqt_string text, int buttons);
int QMessageBox_Warning5(QWidget* parent, libqt_string title, libqt_string text, int buttons, int defaultButton);
int QMessageBox_Critical42(QWidget* parent, libqt_string title, libqt_string text, int buttons);
int QMessageBox_Critical5(QWidget* parent, libqt_string title, libqt_string text, int buttons, int defaultButton);
void QMessageBox_AboutQt2(QWidget* parent, libqt_string title);
int QMessageBox_Information53(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);